css/styles.css
/*
    DEMO STYLE
*/

@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
body {
    font-family: 'Poppins', sans-serif;
    background: #fafafa;
}

p {
    font-family: 'Poppins', sans-serif;
    font-size: 1.1em;
    font-weight: 300;
    line-height: 1.7em;
    color: #999;
}

a,
a:hover,
a:focus {
    color: inherit;
    text-decoration: none;
    transition: all 0.3s;
}

.navbar {
    padding: 15px 10px;
    background: #fff;
    border: none;
    border-radius: 0;
    margin-bottom: 40px;
    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
    position: fixed;
    width: 100%;
}

.lead__summary-content{
    padding: 70px 70px;
}

.navbar-btn {
    box-shadow: none;
    outline: none !important;
    border: none;
}

.line {
    width: 100%;
    height: 1px;
    border-bottom: 1px dashed #ddd;
    margin: 40px 0;
}

/* ---------------------------------------------------
    SIDEBAR STYLE
----------------------------------------------------- */

#sidebar {
    width: 250px;
    position: fixed;
    top: 0;
    left: -250px;
    height: 100vh;
    z-index: 999;
    background: #7386D5;
    color: #fff;
    transition: all 0.3s;
    overflow-y: scroll;
    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
}

#sidebar.active {
    left: 0;
}

#dismiss {
    width: 35px;
    height: 35px;
    line-height: 35px;
    text-align: center;
    background: #7386D5;
    position: absolute;
    top: 10px;
    right: 10px;
    cursor: pointer;
    -webkit-transition: all 0.3s;
    -o-transition: all 0.3s;
    transition: all 0.3s;
}

#dismiss:hover {
    background: #fff;
    color: #7386D5;
}

.overlay {
    display: none;
    position: fixed;
    width: 100vw;
    height: 100vh;
    background: rgba(0, 0, 0, 0.7);
    z-index: 998;
    opacity: 0;
    transition: all 0.5s ease-in-out;
}
.overlay.active {
    display: block;
    opacity: 1;
}

#sidebar .sidebar-header {
    padding: 20px;
    background: #6d7fcc;
}

#sidebar ul.components {
    padding: 20px 0;
    border-bottom: 1px solid #47748b;
}

#sidebar ul p {
    color: #fff;
    padding: 10px;
}

#sidebar ul li a {
    padding: 10px;
    font-size: 1.1em;
    display: block;
}

#sidebar ul li a:hover {
    color: #7386D5;
    background: #fff;
}

#sidebar ul li.active>a,
a[aria-expanded="true"] {
    color: #fff;
    background: #6d7fcc;
}

a[data-toggle="collapse"] {
    position: relative;
}

.dropdown-toggle::after {
    display: block;
    position: absolute;
    top: 50%;
    right: 20px;
    transform: translateY(-50%);
}

ul ul a {
    font-size: 0.9em !important;
    padding-left: 30px !important;
    background: #6d7fcc;
}

ul.CTAs {
    padding: 20px;
}

ul.CTAs a {
    text-align: center;
    font-size: 0.9em !important;
    display: block;
    border-radius: 5px;
    margin-bottom: 5px;
}

a.download {
    background: #fff;
    color: #7386D5;
}

a.article,
a.article:hover {
    background: #6d7fcc !important;
    color: #fff !important;
}

/* ---------------------------------------------------
    CONTENT STYLE
----------------------------------------------------- */

#content {
    width: 100%;
    /*padding: 20px;*/
    min-height: 100vh;
    transition: all 0.3s;
    position: absolute;
    top: 0;
    right: 0;
}

.c2zzSe {
    font-family: "Ultra",serif;
    font-size: 22px;
    color:#88b06a;
    font-weight: bold;
    position:absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.glyph {
    font-weight: bold;
    color:#88b06a;
    position:absolute;
    top: 50%;
    left: 80%;
    transform: translate(-50%, -50%);
    display: inline-block;
}

.Pmm3mc {
    color: rgb(251,188,4);
    top: 0;
    left: 0;
    position: relative;
    height: 20px;
}
/*start of div*/
.EIjale {
     display: -webkit-box; 
     display: -webkit-flex; 
    display: flex;
    -webkit-flex-wrap: wrap;
    flex-wrap: wrap;
   -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
     justify-content: space-between; 
}

.Igsabe {
    font-size: 1em;
    margin: 0 0 48px;
    text-align: center;
    text-transform: uppercase;
}

.WUdCTb {
    border: 1px solid black;
    margin: 0 auto 16px;
    width: 50px;
}

.aPrNKd {
    text-align: center;
}

.CzevL .PDllHc {
    border-color: #88b06a;
}

.PDllHc {
    color: #88b06a;
}

.dogP7c {
    margin: 0 15px;
}

.PDllHc {
    border-bottom: 1px solid;
    font-weight: 800;
    padding-bottom: 8px;
    text-transform: uppercase;
}

.aPrNKd {
    text-align: center;
}   

.Igsabe {
    font-weight: 700;
}

.iTushb {
    -webkit-flex-basis: 100%;
    flex-basis: 100%;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -webkit-flex-direction: column;
    flex-direction: column;
    
}

blockquote {
    display: block;
    margin-block-start: 1em;
    margin-block-end: 1em;
    margin-inline-start: 40px;
    margin-inline-end: 40px;
}

.CoamRb {
    width: 20px;
    height: 20px;
    vertical-align: text-bottom;
}

.P0eG7b {
    color: gray;
    -webkit-box-flex: 2;
    -webkit-flex-grow: 2;
    flex-grow: 2;
    margin-left: 12px;
}

.JRtysb {
    -webkit-user-select: none;
    -webkit-transition: background .3s;
    transition: background .3s;
    border: 0;
    -webkit-border-radius: 50%;
    border-radius: 50%;
    color: #444;
    cursor: pointer;
    display: inline-block;
    fill: #444;
    -webkit-flex-shrink: 0;
    -webkit-flex-shrink: 0;
    flex-shrink: 0;
    height: 48px;
    outline: none;
    overflow: hidden;
    position: relative;
    text-align: center;
    -webkit-tap-highlight-color: transparent;
    width: 48px;
    z-index: 0;
}

.XZleqe {
    color: rgb(251,188,4);
    top: 0;
    left: 0;
    position: absolute;
    height: 20px;
}

.TpcqSc {
    color: rgb(218,220,224);
    z-index: -1;
    vertical-align: top;
    height: 20px;
}

/* Image grid*/

.container{
    max-width: 1224px;
    width:90%;
    margin:auto;
    padding: 40px 0;
}

.title{
    margin-bottom:2 rem;
    text-align: center;
    text-transform: uppercase;
    font-size: 1em;
    
    font-weight: 800;
}

h2{
    margin:auto;
}

.photo-gallery{
    display:flex;
    gap:40px;

}

.column{
    display:flex;
    flex-direction: column;
    gap: 40px;
}

.photo img{
    width: 100%;
    height:300px;
    border-radius: 5px;
    object-fit: cover;
    border: 1px solid black;
}

@media (max-width:760px) {
    .photo-gallery{
        flex-direction: column;
    }
}

/*image grid end*/


.PTfVdf {
    background: #f6f6f6;
}

.b0t70b {
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 40px;
    max-width: 1080px;
    width: 100%;
}

.dlg3Sd {
    padding: 18px;
}


.jY7uzd {
    -webkit-box-align: center;
    -webkit-align-items: center;
    align-items: center;
    box-sizing: border-box;
    display: -webkit-box;
    display: -webkit-flex;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -webkit-flex-direction: column;
    flex-direction: column;
    line-height: 1.5em;
    min-height: 100%;
    padding: 0 0 56px;
    position: relative;
}

.zGTRLd {
    display: -webkit-box;
    display: -webkit-flex;
    display: flex;
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
    -webkit-flex-direction: row;
    flex-direction: row;
}

.CoamRb .Pmm3mc {
    width: 20px;
    height: 20px;
}

q {
    display: inline;
}

.b0t70b {
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 40px;
    max-width: 1080px;
    width: 100%;
}

.WUdCTb {
    border: 1px solid black;
    margin: 0 auto 16px;
    width: 50px;
}



.P0eG7b {
    color: gray;
    -webkit-box-flex: 2;
    -webkit-flex-grow: 2;
    flex-grow: 2;
    margin-left: 12px;
}


div {
    display: block;
}

.jY7uzd {
    -webkit-box-align: center;
    -webkit-align-items: center;
    align-items: center;
    box-sizing: border-box;
    display: -webkit-box;
    display: -webkit-flex;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -webkit-flex-direction: column;
    flex-direction: column;
    line-height: 1.5em;
    min-height: 100%;
    padding: 0 0 56px;
    position: relative;
}
.CzevL {
    font-family: "Slabo 13px",serif;
    font-weight: 400;
}
* {
    -webkit-tap-highlight-color: transparent;
    padding: 0;
    margin: 0;
}


@media (min-width: 640px){
.iTushb {
    -webkit-flex-basis: 48%;
    flex-basis: 48%;
    margin: 0 0 60px;
}
}


@media (max-width: 720px) {
    .c2zzSe {
      font-size: 20px;
      left:55%;
    }
  }

/*end of div*/

.n9wygc{
    display: block;
    height:auto;
    width:100%

}

@media screen and (min-width: 0px) and (max-width: 720px) {
    #sidebarCollapse{
        left:50%;
        
        
    }
    .glyph{ display: none; }
  }

